ncc/testsuite/positive/Issue-1120.n
interface IComparable1[-T]
{
  CompareTo(t : T) : void;
}

class A : IComparable1[A]
{
  public CompareTo(_ : A) : void { }
}

class SomeContainer[T] where T : IComparable1[T]
{
  public Do(_ : T) : void {}
}

module Program
{
  Main() : void
  {
    def c = SomeContainer();
    c.Do(A());
  }
}



/*
BEGIN-OUTPUT
END-OUTPUT
*/
