ncc/testsuite/negative/genspec3.n
class A {
  public this () { }
  public this (_ : int) { }
}

def t' = A.[int] (); // E: A..ctor doesn't take generic parameters

